bestiary-page/bestiary-page-style.css
@font-face {
    src: url(../fonts/FantaisieArtistique/FantaisieArtistique.ttf);
    font-family: witcher;
}

@font-face {
    font-family: wonderland;
    src: url(../fonts/BeyondWonderland/Beyond\ Wonderland.ttf);
}

@font-face {
    font-family: witcher-videogame;
    src: url(fonts/WitcherVideogame/Thewitcher-jnOj.ttf);
}

@font-face {
    font-family: journal;
    src: url(../fonts/Journal/Handwritten_Crystal_v2.ttf);
}

@keyframes elementsFadeIn {
    from{opacity: 0;}
    to{opacity: 1;}
}

@keyframes cellPop
{
    from{margin-top: 50px;}
    to{margin-top: 40px;}
}

html, body
{
    height: 100%;
    margin: 0;
    padding: 0;
}

.container
{
    background-image: url(../images/witcher-bestiary-background.jpg);
    height: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    margin: 0 auto;
    position: relative;
    text-align: center;
    animation: elementsFadeIn 1s;
}

.homepage-title
{
    margin: 0 auto;
    font-family: witcher;
    font-size: 45px;
    color: rgb(189, 0, 0);
    animation: elementsFadeIn 2s;
}

.homepage-title .witcher-transparent-logo
{
    bottom: 0;
    /*background: rgba(231, 228, 228, 0.342);*/
    border-radius: 5px;
    border-style:hidden;
    height: 30px;
    width: 30px;
    animation: elementsFadeIn 3s;
}

.grid-col
{
    display:grid;
    grid-template-columns: repeat(6, 230px);
    justify-content: center;
    padding-bottom: 50px;
}

.cell
{
    background-image: url(../images/icons/notebook-clipart-old-writing-paper-5.png);
    background-size: cover;
    padding: 10px;
    margin-top: 50px;
    height: 200px;
    width: 150px;
    border-radius: 1cm;
    font-family: journal;
    font-size: 17px;
    color: brown;
    animation: elementsFadeIn 2s;
    transform-style: preserve-3d;
    transition: all 0.5s ease;
}

.front
{
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
}

.back
{
    font-size: medium;
    justify-content: center;
    margin-top: -21vh;
    padding-top: 0vh;
    backface-visibility: hidden;
    transform: rotateY(180deg);
}

.cell:hover
{
    cursor: pointer;
    margin-top: 40px;
}

.cell:active
{
    transform: rotateY(180deg);
}

.cell .cell-title
{
    margin-top: -20px;
    padding-bottom: -20px;
}

.beasts-category-icon
{
    height: 100%;
    background-image: url(../images/icons/Tw3_journal_bear.png);
    background-size: cover;
    width: 150px;
    height: 140px;
    background-repeat: no-repeat;
    margin-top: -20px;
}

.cursed-ones-category-icon
{
    height: 100%;
    background-image: url(../images/icons/Tw3_journal_werewolf.png);
    background-size: cover;
    width: 150px;
    height: 150px;
    background-repeat: no-repeat;
    margin-top: -20px;
}

.draconoids-category-icon
{
    height: 100%;
    background-image: url(../images/icons/290px-Tw3_journal_wyvern.png);
    background-size: cover;
    width: 150px;
    height: 140px;
    background-repeat: no-repeat;
    margin-top: -20px;
}

.elementa-category-icon
{
    height: 100%;
    background-image: url(../images/icons/Tw3_journal_fireelemental.png);
    background-size: cover;
    width: 150px;
    height: 140px;
    background-repeat: no-repeat;
    margin-top: -10px;
}

.hybrids-category-icon
{
    height: 100%;
    background-image: url(../images/icons/Tw3_journal_griffin.webp);
    background-size: cover;
    width: 150px;
    height: 140px;
    background-repeat: no-repeat;
    margin-top: -10px;
    margin-left: -5px;
}

.insectoids-category-icon
{
    height: 100%;
    background-image: url(../images/icons/Tw3_journal_arachnomorph.png);
    background-size: cover;
    width: 150px;
    height: 140px;
    background-repeat: no-repeat;
    margin-top: -30px;
    margin-left: 5px;
}

.necrophages-category-icon
{
    height: 100%;
    background-image: url(../images/icons/grave\ hag.png);
    background-size: cover;
    width: 150px;
    height: 145px;
    background-repeat: no-repeat;
    margin-top: -30px;
    margin-left: 5px;
    margin-bottom: 5px;
}

.ogroids-category-icon
{
    height: 100%;
    background-image: url(../images/icons/Tw3_journal_rocktroll.png);
    background-size: cover;
    width: 150px;
    height: 145px;
    background-repeat: no-repeat;
    margin-top: -20px;
    margin-left: 5px;
    margin-bottom: 5px;
}

.relicts-category-icon
{
    height: 100%;
    background-image: url(../images/icons/MHW_Ancient_Leshen_Render.png);
    background-size: cover;
    width: 150px;
    height: 145px;
    background-repeat: no-repeat;
    margin-top: -20px;
    margin-left: 5px;
    margin-bottom: 5px;
}

.specters-category-icon
{
    height: 100%;
    background-image: url(../images/icons/Tw3_journal_plaguemaiden.png);
    background-size: cover;
    width: 150px;
    height: 145px;
    background-repeat: no-repeat;
    margin-top: -30px;
    margin-left: 5px;
    margin-bottom: 5px;
}

.vampires-category-icon
{
    height: 100%;
    background-image: url(../images/icons/290px-Tw3_journal_alp.png);
    background-size: cover;
    width: 150px;
    height: 165px;
    background-repeat: no-repeat;
    margin-top: -15px;
    margin-left: 5px;
    margin-bottom: 5px;
}

.descriptions-vampires
{
    margin-top: -10px;
}

.legendary-category-icon
{
    height: 100%;
    background-image: url(../images/icons/Bestiary_Dagon.png);
    background-size: cover;
    width: 150px;
    height: 190px;
    background-repeat: no-repeat;
    margin-top: -30px;
    margin-left: -15px;
}

.descriptions-legends
{
    margin-top: -30px;
}

/*-----------Conventional Breakpoints------------------*/

@media screen and (max-width: 2800px) {

    /* to fix */
    
}

@media screen and (max-width: 2600px) {

    /* to fix */
    
}

@media screen and (max-width: 1300px) {

    .grid-col
    {
        display:grid;
        grid-template-columns: repeat(3, 230px);
        margin-top: -30px;
        justify-content: center;
    }

    .container
    {
        height: 140%;
    }

    .homepage-title .witcher-transparent-logo
    {
        background: rgba(231, 228, 228, 0.342);
    }
    
}

@media screen and (max-width: 1024px) {

    .grid-col
    {
        display:grid;
        grid-template-columns: repeat(3, 230px);
        margin-top: -30px;
        justify-content: center;
    }

    .container
    {
        height: 140%;
    }

    .homepage-title .witcher-transparent-logo
    {
        background: rgba(231, 228, 228, 0.342);
    }
    
}

@media screen and (max-width: 863px) {

    
    
}

@media screen and (max-width: 700px) {

    .grid-col
    {
        display:grid;
        grid-template-columns: repeat(3, 230px);
        margin-top: -30px;
        margin-left: 7%;
        justify-content: center;
    }

    .container
    {
        height: 140%;
    }

    .homepage-title .witcher-transparent-logo
    {
        background: rgba(231, 228, 228, 0.342);
    }
    
}

@media screen and (max-width: 642px) {

    .grid-col
    {
        display:grid;
        grid-template-columns: repeat(2, 210px);
        margin-top: -30px;
        margin-left: 7%;
        justify-content: center;
    }

    .container
    {
        height: 210%;
    }
    
}

@media screen and (max-width: 422px) {

    .grid-col
    {
        display:grid;
        grid-template-columns: repeat(2, 180px);
        margin-top: -30px;
        margin-left: 7%;
        justify-content: center;
    }
    
}

@media screen and (max-width: 370px) {

    .grid-col
    {
        display:grid;
        grid-template-columns: repeat(1, 150px);
        margin-top: -30px;
        justify-content: center;
    }

    .container
    {
        height: 410%;
    }
    
}

@media screen and (max-height: 800px) {

    .container
    {
        height: max-content;
    }
    
}

